[project]
name = "markpub-themes"
version = "1.0.0"
description = "Theme collection for markpub"
readme = "README.md"
license = "MIT"
authors = [
    { name = "William L. Anderson", email = "band@acm.org" }
]
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markpub_themes"]
